--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^3.0.6",
+    "ical.js": "^2.2.1",
     "lucide-react": "^0.309.0",
     "next": "^15.0.0",
     "next-auth": "^5.0.0-beta.15",
